Fixes buttons alignments and spacing

--- a/src/web/app/pages-instructor/instructor-courses-page/instructor-courses-page.component.scss
+++ b/src/web/app/pages-instructor/instructor-courses-page/instructor-courses-page.component.scss
@@ -44,6 +44,6 @@
   margin-top: 30px;
 }
 
-.actions-cell button {
+.bin-header-button button {
   margin-right: .6em;
 }
